<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    tools:context=".fragments.SubscriptionFormDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSubscriptionFormTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recycler_item_view_min_height"
            android:background="@color/primary_color"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_16"
            android:paddingRight="@dimen/margin_16"
            android:text="Package"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/text_size_16"
            android:paddingRight="@dimen/text_size_16"
            android:paddingBottom="@dimen/margin_4"
            android:paddingTop="@dimen/margin_4">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_minimum_height">

                <AutoCompleteTextView
                    android:id="@+id/autoCompletePackageType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_package"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:id="@+id/layoutPackagePrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recycler_item_view_min_height"
                android:layout_marginTop="@dimen/margin_2"
                android:layout_marginBottom="@dimen/margin_2"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/weight_current_package_label"
                    android:gravity="center_vertical"
                    android:text="@string/price"
                    android:textSize="@dimen/text_size_16"
                    android:paddingStart="@dimen/margin_14"/>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="@dimen/divided_width_2"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8" />

                <TextView
                    android:id="@+id/tvPackagePrice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/weight_current_package_label_value"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_minimum_height">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteMomoPartner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_momo_partner"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_minimum_height"
                android:hint="@string/enter_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMomoNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="9"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>