<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    android:paddingBottom="@dimen/margin_8"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RequestToPayDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRequestToPayTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_minimum_height"
            android:text="@string/pending_transaction"
            android:textSize="@dimen/text_size_18"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:background="@color/color_secondary_dark"
            android:textColor="@color/design_default_color_on_primary"
            android:paddingLeft="@dimen/margin_12"
            android:paddingRight="@dimen/margin_12"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            <com.google.android.material.progressindicator.LinearProgressIndicator-->
<!--                style="@style/Widget.MaterialComponents.CircularProgressIndicator"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:indeterminate="true"-->
<!--                android:paddingTop="24dp"-->
<!--                android:paddingBottom="24dp"-->
<!--                android:progressBackgroundTint="@color/color_accent"-->
<!--                android:visibility="gone"/>-->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_4"
                android:paddingLeft="@dimen/margin_12"
                android:paddingRight="@dimen/margin_12">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_12"
                    android:paddingRight="@dimen/margin_12">
                    <TextView
                        android:id="@+id/tvRequestToPayMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mtn_request_to_pay_message"
                        android:minHeight="@dimen/height_invoice_text"
                        android:paddingBottom="@dimen/margin_4"
                        android:textSize="@dimen/text_size_16"
                        android:layout_marginTop="@dimen/margin_4"
                        android:layout_marginBottom="@dimen/margin_4"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/layoutInvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_12"
                    android:paddingRight="@dimen/margin_12">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2"
                        android:layout_marginBottom="@dimen/margin_2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@dimen/weight_pending_transaction_amount_label"
                            android:gravity="center_vertical"
                            android:text="@string/subject"
                            android:textSize="@dimen/text_size_16" />

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="@dimen/divided_width_2"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/margin_2"
                            android:layout_marginBottom="@dimen/margin_2"
                            android:layout_marginStart="@dimen/margin_8"
                            android:layout_marginEnd="@dimen/margin_14"/>

                        <TextView
                            android:id="@+id/tvRequestToPaySubject"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@dimen/weight_pending_transaction_amount_value"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/text_size_16"
                            android:text="@string/subject"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2"
                        android:layout_marginBottom="@dimen/margin_2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@dimen/weight_pending_transaction_amount_label"
                            android:gravity="center_vertical"
                            android:text="@string/package_type"
                            android:textSize="@dimen/text_size_16" />

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="@dimen/divided_width_2"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/margin_2"
                            android:layout_marginBottom="@dimen/margin_2"
                            android:layout_marginStart="@dimen/margin_8"
                            android:layout_marginEnd="@dimen/margin_14"/>

                        <TextView
                            android:id="@+id/tvRequestToPayPackage"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@dimen/weight_pending_transaction_amount_value"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2"
                        android:layout_marginBottom="@dimen/margin_2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_weight="@dimen/weight_pending_transaction_amount_label"
                            android:text="@string/amount"
                            android:textSize="@dimen/text_size_16" />

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="@dimen/divided_width_2"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/margin_2"
                            android:layout_marginBottom="@dimen/margin_2"
                            android:layout_marginStart="@dimen/margin_8"
                            android:layout_marginEnd="@dimen/margin_14"/>

                        <TextView
                            android:id="@+id/tvRequestToPayAmount"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@dimen/weight_pending_transaction_amount_value"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>