<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivateTrialPackageActivity">

    <LinearLayout
        android:id="@+id/subjectsAvailableLo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/subjects_available"/>
        <TextView
            android:id="@+id/subjectsAvailableTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Biology, Human Biology"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trialPackageLo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/subjectsAvailableLo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:gravity="center_vertical"
            android:text="Start off by activating your trial package for all subjects"
            android:textStyle="bold"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardCornerRadius="@dimen/card_corner_radius_8"
            app:cardElevation="@dimen/card_elevation_8"
            android:layout_margin="@dimen/margin_16">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@color/color_primary">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/margin_14"
                        android:paddingEnd="@dimen/margin_14"
                        android:text="Trial Package for all subjects"
                        android:textColor="@color/design_default_color_on_primary"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:paddingStart="@dimen/margin_14"
                        android:paddingEnd="@dimen/margin_14">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/duration"
                            android:gravity="center_vertical"/>
                        <TextView
                            android:id="@+id/trialPackageDurationTv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="3 Hours"
                            android:gravity="center_vertical"
                            android:paddingStart="@dimen/margin_8"
                            android:paddingEnd="@dimen/margin_8"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:paddingStart="@dimen/margin_14"
                        android:paddingEnd="@dimen/margin_14">

                        <Button
                            android:id="@+id/activateButton"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activate" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>



</RelativeLayout>